--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^0.14.17",
     "@types/react-redux": "^4.4.32",
     "@types/redux": "^3.6.31",
+    "awesome-typescript-loader": "^2.2.4",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
@@ -24,7 +25,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
-    "awesome-typescript-loader": "^2.2.4",
+    "nib": "^1.1.2",
     "react-hot-loader": "^3.0.0-beta.5",
     "source-map-loader": "^0.1.5",
     "typescript": "^2.0.3",
